Add sign out option

--- a/chart/src/templates/index.html
+++ b/chart/src/templates/index.html
@@ -9,7 +9,8 @@
 
   <br/>
   <h1>My Spotify data, visualized</h1>
-  <br/>
+
+  <h2><a href="/sign_out">Sign Out<a/></h2>
 
   <p>Taking a look at some data from the Spotify API using Python and Chart.js...</p>
   <br/>
