--- a/chart/src/static/css/styles.css
+++ b/chart/src/static/css/styles.css
@@ -8,9 +8,16 @@
 }
 
 h1 {
-    font-size: 20px;;
+    font-size: 20px;
     font-family: Helvetica;
     color: rgb(55, 55, 55);
+    text-align: center;
+}
+
+h2 {
+    font-size: 18px;
+    font-family: Helvetica;
+    color:rgb(55, 55, 55);
     text-align: center;
 }
 
